// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart checkout should return object with the total and the list of items 1`] = `
Object {
  "items": Array [
    Object {
      "product": Object {
        "price": 35388,
        "title": "Adidas running shoes",
      },
      "quantity": 2,
    },
    Object {
      "product": Object {
        "price": 41872,
        "title": "Adidas running shoes",
      },
      "quantity": 3,
    },
  ],
  "total": 196392,
}
`;

exports[`Cart checkout should return object with the total and the list of items when sumary is called 1`] = `
Object {
  "formatted": "R$1,963.92",
  "items": Array [
    Object {
      "product": Object {
        "price": 35388,
        "title": "Adidas running shoes",
      },
      "quantity": 2,
    },
    Object {
      "product": Object {
        "price": 41872,
        "title": "Adidas running shoes",
      },
      "quantity": 3,
    },
  ],
  "total": Object {
    "amount": 196392,
    "currency": "BRL",
    "precision": 2,
  },
}
`;
